templates/ingress-template.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - jukka.ninja
    secretName: service-name-tls
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: service-name
          servicePort: 80
